<resources>
    <string name="app_name">Color</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="box_six">Box Six</string>
    <string name="box_eleven">Box Eleven</string>
    <string name="box_twelve">Box Twelve</string>
    <string name="box_thirteen">Box Thirteen</string>
    <string name="box_fourteen">Box Fourteen</string>
    <string name="box_fifteen">Box Fifteen</string>
    <string name="box_sixteen">Box Sixteen</string>
</resources>
